fix: accessability color contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	width: 100%;
 }
 #footer {
-  background-color: #444;
+  background-color: #000;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
@@ -90,7 +90,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #01447E;
     text-decoration: none;
 }
 
@@ -110,7 +110,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   min-height: 55px;
-  background-color: #3397DB;
+  background-color: #01447E;
 }
 .filter-options h2 {
   color: white;
@@ -133,7 +133,7 @@ nav h1 a {
 .filter-box {
   max-width: 600px;
   min-height: 55px;
-  background-color: #3397DB;
+  background-color: #01447E;
 	display: flex;
 	flex-wrap: wrap;
 	margin-left:auto;
@@ -172,7 +172,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #01447E;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -186,7 +186,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #01447E;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -226,7 +226,7 @@ nav h1 a {
   width: calc(100% - 50px);
 }
 #restaurant-name {
-  color: #f18200;
+  color: #01447E;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -266,7 +266,7 @@ nav h1 a {
   padding: 30px 30px 80px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #01447E;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -292,6 +292,11 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/* fix contrast accessability issue from leaflet.css */
+.leaflet-control-attribution a {
+	color: #252831;
 }
 
 /*settings xl viewports*/
